Revert "fixed dropdowns overlap issue"

--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -116,7 +116,7 @@
 .react-datepicker__month-dropdown-container--scroll,
 .react-datepicker__month-year-dropdown-container--scroll {
   display: inline-block;
-  margin: 0 15px;
+  margin: 0 2px;
 }
 
 .react-datepicker__current-month,
